<resources>
    <string name="app_name">Checklist</string>

    <string name="hint_task">Add a task…</string>
    <string name="hint_task_details">Add task details (Optional)</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Task not saved because it is empty.</string>
    <string name="priority">Priority</string>
    <string name="due_date">Due Date (Optional)</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="expand_item">Expand Item</string>

    <!--Share Preference-->
    <string name="shared_preference_file">com.pixellore.checklist.PREFERENCE_FILE</string>
    <string name="shared_pref_app_theme_key">APP_THEME_KEY</string>
    <string name="shared_pref_app_version_code_key">APP_VERSION_KEY</string>

    <string name="pinned">Pinned</string>
    <string name="checklist_title">Create new checklist</string>
    <string name="change_background">Change Background</string>
    <string name="add_todo_item">Add Todo item</string>
    <string name="more_edit_options_for_checklist">More edit options for checklist</string>
    <string name="change_text_color">Change Text color</string>
    <string name="delete">Delete</string>
    <string name="delete_subtask">Delete subtask</string>
    <string name="change_font_style">Change Font style</string>
    <string name="change_title_text_color">Change Title Text color</string>
    <string name="change_other_text_color">Change Other Text color</string>
    <string name="change_to_default_format">Change to default format</string>
    <string name="rename_list">Rename</string>
    <string name="style_list_items">Apply Style to all tasks</string>
    <string name="share_list">Share list</string>
    <string name="change_task_style">Change task style?</string>
    <string name="select_the_style_to_apply_to_all_tasks_in_this_checklist">Select the style to apply to ALL tasks in this checklist</string>
    <string name="background_color">Background color</string>
    <string name="task_title_text_color">Task title Text color</string>
    <string name="task_details_text_color">Task details Text color</string>
    <string name="font_style">Font style</string>
    <string name="empty_tasks">No tasks!</string>
    <string name="empty_tasks_explain">Add a new task by clicking \'+\' at the bottom of this page.</string>
    <string name="empty_checklists">No Checklists!</string>
    <string name="empty_checklists_explain">Add a new checklist. Once the checklist is added it will be displayed here.</string>
    <string name="pick_due_date">Pick Due date</string>
    <string name="about_page_short_description">ActionPlan Color Checklist is a fully customizable checklist app. Checklists and tasks can be styled with color and font.</string>
    <string name="change_app_theme">Change App Theme</string>
    <string name="about">About</string>
    <string name="done">Done</string>
    <string name="learn_more">Learn more</string>
    <string name="tutorial_icon">tutorial icon</string>
    <string name="rename_checklist">Rename Checklist?</string>
    <string name="save">Save</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="app_run_type_normal">Normal Run</string>
    <string name="app_run_type_first">First Run</string>
    <string name="app_run_type_updated">After Update Run</string>

</resources>