<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group
        android:id="@+id/formatting">

        <item
            android:id="@+id/popup_change_background"
            android:title="@string/change_background"
            app:showAsAction="never" />

        <item
            android:id="@+id/popup_change_title_color"
            android:title="@string/change_title_text_color"
            app:showAsAction="never" />

        <item
            android:id="@+id/popup_change_other_title_color"
            android:title="@string/change_other_text_color"
            app:showAsAction="never" />

        <item
            android:id="@+id/popup_text_styling"
            android:title="@string/change_font_style"
            app:showAsAction="never" />

        <item
            android:id="@+id/popup_clear_format"
            android:title="@string/change_to_default_format"
            app:showAsAction="never" />

    </group>

    <item
        android:id="@+id/popup_delete_task_item"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>