<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Delete all", should appear as action button if possible -->
    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_baseline_delete_sweep_24"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_change_theme"
        android:title="@string/change_app_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <!-- [DEBUG] Print the database tables in the Log -->
    <item
        android:id="@+id/action_print_database"
        android:title="[DEBUG] Print Database"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />

</menu>