<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editor_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/task_editor_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/toolbarPopupMenu"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/task_editor_activity_toolbar">

        <LinearLayout
            android:id="@+id/secondary_color_design"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/main_views_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <EditText
                android:id="@+id/edit_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_task"
                style="@style/edittext_task_editor" />

            <EditText
                android:id="@+id/edit_task_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_task_details"
                style="@style/edittext_task_editor" />

            <EditText
                android:id="@+id/add_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/due_date"
                style="@style/edittext_task_editor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:id="@+id/subtask_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                </LinearLayout>


                <Button
                    android:id="@+id/add_subtask_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_subtask"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:background="@android:color/white"
                    android:elevation="5dp"
                    android:padding="12dp"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subtask_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separation_line">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_save"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="18dp"
                    android:background="@android:color/white"
                    android:elevation="5dp"
                    android:textColor="?attr/colorPrimary" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="18dp"
                    android:background="@android:color/white"
                    android:elevation="5dp"
                    android:textColor="?attr/colorPrimary" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>